# ConnectionProtocolStateMachine

./: CMakeLists.txt  Main.cpp  README.md
scripts/: build.sh  run.sh  run_tests.sh
src/: ConnectionProtocol.cpp  ConnectionProtocol.h
test/: CMakeLists.txt  ConnectionProtocolTest.cpp  main.cpp
